src/objects/c2g__TransactionReconciliation__c.object
<CustomObject>
    <description>Stores transaction reconciliation header details.</description>
    <fields>
        <fullName>c2g__ApexJobId__c</fullName>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Transaction Reconciliations</relationshipLabel>
        <relationshipName>TransactionReconciliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__FirstCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>First Company</description>
        <label>First Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>First Company Reconciliations</relationshipLabel>
        <relationshipName>FirstCompanyReconciliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__MatchOnAmount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Match on Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__MatchOnDate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Match on Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__MatchOnICTRef__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Match on ICT ref</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__OutstandingDifference__c</fullName>
        <label>Outstanding Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ProcessStatus__c</fullName>
        <label>Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ReconciliationsName__c</fullName>
        <description>Name of Reconciliation</description>
        <label>Reconciliations Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SecondCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Second Company</description>
        <label>Second Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Second Company Reconciliations</relationshipLabel>
        <relationshipName>SecondCompanyReconciliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
                <value>
                    <fullName>Reconciling</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Error on Save</fullName>
                </value>
                <value>
                    <fullName>Error on Reconcile</fullName>
                </value>
                <value>
                    <fullName>Error on Unreconcile</fullName>
                </value>
                <value>
                    <fullName>Unreconciling</fullName>
                </value>
                <value>
                    <fullName>Unreconciled</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction Reconciliation</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__ReconciliationsName__c</columns>
        <columns>c2g__Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>c2g__FirstCompany__c</columns>
        <columns>c2g__SecondCompany__c</columns>
        <columns>c2g__OutstandingDifference__c</columns>
        <columns>c2g__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TREC-{0000}</displayFormat>
        <label>Transaction Reconciliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Reconciliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>